# ha-estfeed

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yml
custom_components/estfeed/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py  services.yaml  statistics.py  strings.json
custom_components/estfeed/translations/: en.json  et.json
docs/superpowers/plans/: 2026-04-29-estfeed-ha-integration.md
docs/superpowers/specs/: 2026-04-29-estfeed-ha-integration-design.md
scripts/: smoke.py
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_sensor.py  test_statistics.py
