[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-estfeed"
version = "0.1.0"
description = "Home Assistant integration for Elering Estfeed metering data"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "homeassistant",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-homeassistant-custom-component",
  "aioresponses",
  "freezegun",
  "ruff",
  "mypy",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "ARG", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["custom_components/estfeed"]
plugins = []

[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest_homeassistant_custom_component.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
